k8s.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: db
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - image: postgres:9.4
          name: db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
              subPath: data
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-todo-list
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-todo-list
  template:
    metadata:
      labels:
        app: go-todo-list
    spec:
      containers:
      - image: okteto.dev/go-todo-list:001
        name: go-todo-list
        readinessProbe:
          periodSeconds: 1
          httpGet:
            path: /healthz
            port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: go-todo-list
spec:
  type: LoadBalancer
  ports:
  - name: "go-todo-list"
    port: 8080
  selector:
    app: go-todo-list

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-todo-list
  annotations:
    dev.okteto.com/generate-host: go-todo-list
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: go-todo-list
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
